# AnamGenesisApp

./: .gitignore  README.md  app.py  pyproject.toml
app/: app.py  utils.py
app/data/: allergies.csv  conditions.csv  immunizations.csv  patients.csv
data/: anamnesis_data.csv  careplans.csv  discharge_reports_generated.csv  encounters.csv  imaging_studies.csv  medications.csv  procedures.csv
static/: base.css
streamlit_app/: app.py  utils.py
streamlit_app/templates/: footer.html
templates/: footer.html
