[tool.poetry]
name = "anamgenesis"
version = "0.1.0"
description = "Generate anamnesis from EHR data using AI"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"
streamlit = "^1.41.1"
anthropic = "^0.42.0"
python-dotenv = "^1.0.1"
plotly = "^5.24.1"
openai = "^1.60.2"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
