[tool.poetry]
name = "AnamGenesis"
version = "0.1.0"
description = "Generate anamnesis from EHR data using AI"
authors = ["Levente Harsanyi - hlevente17@gmail.com"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"
streamlit = "^1.41.1"
plotly = "^5.24.1"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"

[tool.poetry.packages]
packages = [{ include = "app" }]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
